--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dts-bundler",
+  "name": "dts-fusion",
   "private": false,
   "version": "0.0.1",
   "type": "commonjs",
@@ -23,15 +23,12 @@
     "type": "git",
     "url": "https://github.com/isakhauge/dts-bundler.git"
   },
+  "main": "src/DtsPlugin.js",
+  "module": "src/DtsPlugin.js",
+  "source": "src/DtsPlugin.js",
   "license": "MIT",
   "scripts": {
     "tsc": "tsc -p tsconfig.json"
   },
-  "devDependencies": {
-    "@types/node": "^20.3.0",
-    "@types/rollup": "^0.54.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
-  }
+  "devDependencies": {}
 }
